# bbp

./: CMakeLists.txt  Doxyfile  README.md  bbp.c  bbp.h  bbp.pc.in  bbp_cli.c  bbp_tester.c  benchmarks.c  bitpacking.c  coding.c  coding_helpers.c  common.c  globals.h  intrinsics.h
